New Crowdin updates (#21)
* New translations loc_source.xaml (Spanish) (Thanks Madcore!)

--- a/Source/Localization/es_ES.xaml
+++ b/Source/Localization/es_ES.xaml
@@ -71,12 +71,12 @@
     <sys:String x:Key="LOC_GI_RequriedSettingsIncorrectDesktopError">Los ajustes requeridos faltan o son incorrectos. ¿Ir al menú de configuración?</sys:String>
     <sys:String x:Key="LOC_GI_RequriedSettingsIncorrectFullscreenError">Los ajustes requeridos no se encuentran o son incorrectos. Por favor, visita el menú de configuración en el modo de escritorio.</sys:String>
     <sys:String x:Key="LOC_GI_RequriedSettingsIncorrectCreateShortcutError">Los ajustes requeridos no se encuentran o son incorrectos.</sys:String>
-    <sys:String x:Key="LOC_GI_GlosSITargetsFolderNotFoundError">The GlosSI Targets folder could not be found. GlosSI must be installed and have run at least once before the GlosSI Integration extension can be used.</sys:String>
+    <sys:String x:Key="LOC_GI_GlosSITargetsFolderNotFoundError">No se ha podido encontrar la carpeta de destino de GlosSI. GlosSI debe estar instalado y ejecutarse al menos una vez antes de que la extensión de integración GlosSI pueda ser usada.</sys:String>
     
     <!--Settings Verification Errors-->
-    <sys:String x:Key="LOC_GI_ShortcutsVDFNotSetError">The path to shortcuts.vdf has not been set.</sys:String>
-    <sys:String x:Key="LOC_GI_GlosSIFolderNotSetError">The path to the GlosSI folder has not been set.</sys:String>
-    <sys:String x:Key="LOC_GI_ShortcutsVDFWrongNameError">The shortcuts.vdf path does not lead to a file called &quot;shortcuts.vdf&quot;.</sys:String>
+    <sys:String x:Key="LOC_GI_ShortcutsVDFNotSetError">La ruta a shortcuts.vdf no ha sido definida.</sys:String>
+    <sys:String x:Key="LOC_GI_GlosSIFolderNotSetError">La ruta a la carpeta GlosSI no se ha establecido.</sys:String>
+    <sys:String x:Key="LOC_GI_ShortcutsVDFWrongNameError">La ruta shortcuts.vdf no conduce a un archivo llamado &quot;shortcuts.vdf&quot;.</sys:String>
     <sys:String x:Key="LOC_GI_ShortcutsVDFNotFoundError">No se encuentra el archivo shortcuts.vdf.</sys:String>
     <sys:String x:Key="LOC_GI_GlosSIFolderNotFoundError">No se ha podido encontrar la ubicación de la carpeta de GlosSI.</sys:String>
     <sys:String x:Key="LOC_GI_GlosSIFolderExecutablesNotFoundError">La ubicación de la carpeta de GlosSI es incorrecta: los ejecutables de GlosSI no se han encontrado.</sys:String>
@@ -86,31 +86,31 @@
     <sys:String x:Key="LOC_GI_PlayniteOverlayType">Playnite</sys:String>
     <sys:String x:Key="LOC_GI_DefaultOverlayType">predeterminado</sys:String>
     <sys:String x:Key="LOC_GI_OverlayNameNotSetError">No se ha establecido el nombre de la capa {0}.</sys:String>
-    <sys:String x:Key="LOC_GI_OverlayGlosSITargetNotFoundError">The target file referenced by the {0} overlay name could not be found.</sys:String>
-    <sys:String x:Key="LOC_GI_OverlayGlosSITargetNoNameError">Something is wrong with the file referenced by the {0} overlay name. The name property in the target .json file in %appdata%\GlosSI\Targets could not be found or has not been set.</sys:String>
+    <sys:String x:Key="LOC_GI_OverlayGlosSITargetNotFoundError">El archivo de destino referenciado por el nombre de capa {0} no pudo ser encontrado.</sys:String>
+    <sys:String x:Key="LOC_GI_OverlayGlosSITargetNoNameError">Algo está mal con el archivo referenciado por el nombre de capa {0} . La propiedad de nombre en el archivo .json de destino en %appdata%\GlosSI\Targets no se pudo encontrar o no se ha establecido.</sys:String>
     
     <!--Shortcut/Overlay Creation Verification-->
-    <sys:String x:Key="LOC_GI_SteamShortcutNameNotSetError">The name of the Steam shortcut has not been set.</sys:String>
-    <sys:String x:Key="LOC_GI_ShortcutTargetAlreadyExistsError">A GlosSI target file already exists with the chosen shortcut name.</sys:String>
-    <sys:String x:Key="LOC_GI_ShortcutIconNotFoundError">The icon could not be found.</sys:String>
-    <sys:String x:Key="LOC_GI_ShortcutExeIconWarning">The icon path leads to an executable (.exe) file. Any transparency will be lost.</sys:String>
+    <sys:String x:Key="LOC_GI_SteamShortcutNameNotSetError">El nombre del acceso directo de Steam no ha sido establecido.</sys:String>
+    <sys:String x:Key="LOC_GI_ShortcutTargetAlreadyExistsError">Ya existe un archivo de destino GlosSI con el nombre del acceso directo elegido.</sys:String>
+    <sys:String x:Key="LOC_GI_ShortcutIconNotFoundError">No se pudo encontrar el icono.</sys:String>
+    <sys:String x:Key="LOC_GI_ShortcutExeIconWarning">La ruta del icono lleva a un archivo ejecutable (.exe). Se perderá cualquier transparencia.</sys:String>
     
     <!--Exceptional Errors-->
-    <sys:String x:Key="LOC_GI_ReadDefaultTargetUnexpectedError">Failed to open the default target file: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_ReadIconPathUnexpectedError">Unexpected error encountered when reading the icon path: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_CreateSteamShortcutUnexpectedError">Something went wrong when attempting to create the Steam shortcut: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_GetGlosSIVersionUnexpectedError">Failed to check the GlosSI version: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_CreateDefaultTargetFileUnexpectedError">Failed to access or create the default target file: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_FailedBackupGlosSIUnexpectedError">Failed to backup the GlosSI configuration files: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_FailedBackupSteamFileUnexpectedError">Failed to backup the shortcuts.vdf file: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_OpenLinkFailedUnexpectedError">Failed to open the link: &quot;{0}&quot;: {1}</sys:String>
-    <sys:String x:Key="LOC_GI_ReadOverlayGlosSITargetUnexpectedError">Something went wrong when attempting to read the target file referenced by the {0} overlay name: {1}</sys:String>
-    <sys:String x:Key="LOC_GI_RunSteamGameUnexpectedError">GlosSI Integration failed to run the Steam shortcut: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_DefaultTargetItemsMissingUnexpectedError">The GlosSI default target is missing items.</sys:String>
-    <sys:String x:Key="LOC_GI_CloseGlosSITargetTimelyUnexpectedError">GlosSI Integration failed to close the Steam Overlay in time.</sys:String>
-    <sys:String x:Key="LOC_GI_CloseGlosSITargetUnexpectedError">GlosSI Integration failed to close the Steam Overlay: {0}</sys:String>
-    <sys:String x:Key="LOC_GI_CreateGlosSITargetUnexpectedError">GlosSI Integration failed to add the GlosSI target configuration file and/or Steam shortcut for &quot;{0}&quot;, the adding process was aborted: {1}</sys:String>
-    <sys:String x:Key="LOC_GI_RemoveGlosSITargetUnexpectedError">GlosSI Integration failed to remove the GlosSI target configuration file and/or Steam shortcut for &quot;{0}&quot;, the removal process was aborted: {1}</sys:String>
-    <sys:String x:Key="LOC_GI_MultipleChangedShortcutsUnexpectedError">More Steam shortcuts appears to have been modified by GlosSIConfig than intended, the changes have been reverted. Please consider reporting this erroneous behavior.</sys:String>
+    <sys:String x:Key="LOC_GI_ReadDefaultTargetUnexpectedError">Error al abrir el archivo de destino predeterminado: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_ReadIconPathUnexpectedError">Se encontró un error inesperado al leer la ruta del icono: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_CreateSteamShortcutUnexpectedError">Algo salió mal al intentar crear el acceso directo de Steam: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_GetGlosSIVersionUnexpectedError">Error al comprobar la versión de GlosSI: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_CreateDefaultTargetFileUnexpectedError">Error al acceder o crear el archivo de destino predeterminado: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_FailedBackupGlosSIUnexpectedError">Error al respaldar los archivos de configuración GlosSI: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_FailedBackupSteamFileUnexpectedError">Error al realizar la copia de seguridad del archivo shortcuts.vdf: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_OpenLinkFailedUnexpectedError">Error al abrir el enlace: &quot;{0}&quot;: {1}</sys:String>
+    <sys:String x:Key="LOC_GI_ReadOverlayGlosSITargetUnexpectedError">Algo salió mal al intentar leer el archivo de destino referenciado por el nombre de capa {0} : {1}</sys:String>
+    <sys:String x:Key="LOC_GI_RunSteamGameUnexpectedError">GlosSI Integration no pudo ejecutar el acceso directo de Steam: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_DefaultTargetItemsMissingUnexpectedError">El objetivo por defecto de GlosSI no tiene elementos.</sys:String>
+    <sys:String x:Key="LOC_GI_CloseGlosSITargetTimelyUnexpectedError">GlosSI Integration no ha podido cerrar la superposición de Steam a tiempo.</sys:String>
+    <sys:String x:Key="LOC_GI_CloseGlosSITargetUnexpectedError">GlosSI Integration falló al cerrar la sobreposición de Steam: {0}</sys:String>
+    <sys:String x:Key="LOC_GI_CreateGlosSITargetUnexpectedError">GlosSI Integration no ha podido agregar el archivo de configuración de destino GlosSI y/o el acceso directo de Steam para &quot;{0}&quot;, el proceso de adición fue abortado: {1}</sys:String>
+    <sys:String x:Key="LOC_GI_RemoveGlosSITargetUnexpectedError">GlosSI Integration no ha podido eliminar el archivo de configuración de destino GlosSI y/o el acceso directo de Steam para &quot;{0}&quot;, el proceso de eliminación fue abortado: {1}</sys:String>
+    <sys:String x:Key="LOC_GI_MultipleChangedShortcutsUnexpectedError">Más atajos de Steam parecen haber sido modificados por GlosSIConfig de lo previsto, y los cambios han sido revertidos. Por favor considere informar de este comportamiento erróneo.</sys:String>
 
 </ResourceDictionary>
