--- a/Source/Localization/zh_CN.xaml
+++ b/Source/Localization/zh_CN.xaml
@@ -2,8 +2,8 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib" xml:space="preserve">
 
     <!--General-->
-    <sys:String x:Key="LOC_GI_DefaultWindowTitle">GlosSI Integration</sys:String>
-    <sys:String x:Key="LOC_GI_RestartSteamReminder">Steam must be restarted for the changes to take effect.</sys:String>
+    <sys:String x:Key="LOC_GI_DefaultWindowTitle">GlosSI集成</sys:String>
+    <sys:String x:Key="LOC_GI_RestartSteamReminder">必须重新启动Steam才能使更改生效。</sys:String>
     <sys:String x:Key="LOC_GI_GlosSITargetNotFoundOnGameStartError">GlosSI Integration failed to run the Steam shortcut: The GlosSI .json target file could not be found.</sys:String>
     <sys:String x:Key="LOC_GI_TopPanelButtonDisableTooltip">Disable GlosSI Integration</sys:String>
     <sys:String x:Key="LOC_GI_TopPanelButtonEnableTooltip">Enable GlosSI Integration</sys:String>
